--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
+:root {
+  --bg-color: #17252a;
+  --primary-color: #31c5be;
+  --dark-text-color: #196666;
+  --danger-color: #dc3545;
+  --success-color: #28a745;
+  --info-color: #17a2b8;
+}
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: cursive;
+  height: 65vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  background-color: var(--bg-color);
+  padding: 0.5rem;
+  border-radius: 0rem 0rem 0rem 1rem;
+  margin-bottom: 40px;
+  color: var(--primary-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  width: 50%;
+  margin: auto;
+}
+
+label {
+  display: block;
+  margin: 20px;
+  font-weight: bold;
+  font-size: 1.4rem;
+  color: var(--dark-text-color);
+}
+
+input {
+  font-family: cursive, sans-serif;
+  width: 60%;
+  display: block;
+  margin: auto;
+  margin-block: 10px;
+  padding: 10px;
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+  text-align: center;
+  font-size: medium;
+}
+
+button {
+  font-family: cursive;
+  padding: 8px 10px;
+  margin: 15px 20px 0 20px;
+  box-shadow: 0px 2px 5px -1px rgb(50 50 93 / 25%), 0px 1px 3px -1px rgb(0 0 0 / 30%);
+  transition: .3s;
+  font-size: large;
+  cursor: pointer;
+
+  background-color: var(--bg-color);
+  border: 1px solid var(--info-color);
+  color: var(--primary-color);
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+.output {
+  font-size: x-large;
+  font-weight: bold;
+  margin: 1.5rem;
+  height: 5vh;
+}
+
+/* footer */
+.footer {
+  background-color: var(--primary-color);
+  color: var(--bg-color);
+  padding: 2rem 1rem;
+  text-align: center;
+  border-radius: 0rem 1rem 0rem 0rem;
+  margin-top: 100px;
+
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+
+}
+
+.footer .link {
+  color: var(--bg-color);
+  padding: 0;
+}
+
+.footer .link img {
+  width: 30px;
+}
+
+.footer ul {
+  padding-inline-start: 0px;
+}
+
+.footer-header {
+  font-weight: bold;
+  font-size: x-large;
+}
+
+.link {
+  padding: 0.5rem 1rem;
+}
+
+.list-non-bullet {
+  list-style: none;
+}
+
+.list-item-inline {
+  display: inline;
+  padding: 0rem 0.5rem;
 }
